@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.28-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-28 14:50:55, took 00:16:52, with 50 workers, on 4226 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2026-01-28 15:26:17, took 00:13:09, with 50 workers, on 4228 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3684,6 +3684,8 @@ http://sources.freertr.org/cfg/rout-bgp921.tst;rout-bgp921.tst;success;unicast+m
 http://sources.freertr.org/cfg/rout-bgp922.tst;rout-bgp922.tst;success;unicast+omup over bgp
 http://sources.freertr.org/cfg/rout-bgp923.tst;rout-bgp923.tst;success;unicast+omup over bgp with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp924.tst;rout-bgp924.tst;success;unicast+omup over bgp with additional path
+http://sources.freertr.org/cfg/rout-bgp925.tst;rout-bgp925.tst;success;ibgp rr with a lot peer
+http://sources.freertr.org/cfg/rout-bgp926.tst;rout-bgp926.tst;success;bgp route server with a lot peer
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
