@@ -3680,6 +3680,8 @@ qc pass: unicast+mup over bgp with additional path
 qc pass: unicast+omup over bgp
 qc pass: unicast+omup over bgp with soft-reconfig
 qc pass: unicast+omup over bgp with additional path
+qc pass: ibgp rr with a lot peer
+qc pass: bgp route server with a lot peer
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
