@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.28-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-28 14:50:55, took 00:16:52, with 50 workers, on 4226 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2026-01-28 15:26:17, took 00:13:09, with 50 workers, on 4228 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3696,6 +3696,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp922.tst">rout-bgp922.tst</a></td><td>success</td><td>unicast+omup over bgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp923.tst">rout-bgp923.tst</a></td><td>success</td><td>unicast+omup over bgp with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp924.tst">rout-bgp924.tst</a></td><td>success</td><td>unicast+omup over bgp with additional path</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp925.tst">rout-bgp925.tst</a></td><td>success</td><td>ibgp rr with a lot peer</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp926.tst">rout-bgp926.tst</a></td><td>success</td><td>bgp route server with a lot peer</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
